[quix-frontend] fix double scroll

--- a/quix-frontend/client/src/state-components/notebook/notebook.scss
+++ b/quix-frontend/client/src/state-components/notebook/notebook.scss
@@ -1,6 +1,10 @@
 @import '../../lib/ui/assets/css/def/colors.def';
 
 quix-base-notebook {
+  .section-content {
+    overflow: hidden !important;
+  }
+
   .quix-notebook-content {
     margin-right: -12px;
     padding-right: 12px;
